--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/boa-interpreter"/>
+	<classpathentry kind="lib" path="/boa-interpreter/lib/google-collect-1.0.jar"/>
+	<classpathentry kind="lib" path="/boa-interpreter/lib/commons-httpclient-3.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
